# graphic_graphics_effect

./: .clang-format  .gitignore  AGENTS.md  BUILD.gn  CLAUDE.md  README.en.md  README.md  bundle.json  config.gni
docs/: architecture.md  工厂合并执行计划.md  效果支持清单.md
docs/effect/: params_reflection.md
docs/factory/: effect_factory_design.md  effect_factory_guide.md
docs/shape/: sdf_ellipse.md  sdf_rrect.md
docs/wiki/: 效果工厂设计文档.md
include/: ge_aibar_shader_filter.h  ge_aurora_noise_shader.h  ge_bezier_warp_shader_filter.h  ge_border_light_shader.h  ge_circle_flowlight_effect.h  ge_color_gradient_effect.h  ge_color_gradient_shader_filter.h  ge_color_remap_shader_filter.h  ge_content_light_shader_filter.h  ge_contour_diagonal_flow_light_shader.h  ge_direct_draw_on_canvas_pass.h  ge_direction_light_shader_filter.h  ge_dispersion_shader_filter.h  ge_displacement_distort_shader_filter.h  ge_double_ripple_shader_mask.h  ge_edge_light_shader_filter.h  ge_effects_params.h  ge_filter_composer.h  ge_filter_composer_pass.h  ge_filter_params_registers_ext.h  ge_filter_type.h  ge_frame_gradient_shader_mask.h  ge_frosted_glass_blur_shader_filter.h  ge_frosted_glass_effect.h  ge_frosted_glass_shader_filter.h  ge_gamma_correction_filter.h  ge_grey_shader_filter.h  ge_grid_warp_shader_filter.h  ge_harmonium_effect_shader_mask.h  ge_hps_build_pass.h  ge_hps_compatible_pass.h  ge_hps_effect_filter.h  ge_image_shader_mask.h  ge_kawase_blur_shader_filter.h  ge_linear_gradient_blur_shader_filter.h  ge_linear_gradient_shader_mask.h  ge_magnifier_shader_filter.h  ge_mask_transition_shader_filter.h  ge_mesa_blur_shader_filter.h  ge_mesa_fusion_pass.h  (+20 more)
include/cache/: ge_cache_provider.h  ge_image_cache_provider.h
include/core/: ge_effect_factory.h  ge_filter_type.h  ge_filter_type_info.h  ge_filter_type_info_v2.h  ge_visual_effect.h  ge_visual_effect_container.h  ge_visual_effect_impl.h  ge_visual_effect_impl_v2.h
include/effect/: ge_effects_params.h  ge_filter_params.h  ge_params_associate_types.h  ge_params_reflection.h  ge_params_reflection_v2.h  ge_shader_filter_params.h  ge_shader_filter_params_for_kits.h  ge_shader_filter_params_namesonly.h  ge_value_transformer.h  ge_value_transformer_traits.h
include/effect_cfg/: ge_frosted_glass_effect_cfg.h  ge_xml_parser_base.h
include/ext/: gex_complex_shader.h  gex_complex_shader_params.h  gex_dot_matrix_shader_params.h
include/hps/: ge_hps_effect_filter.h
include/pipeline/: ge_cache_provider.h  ge_direct_draw_on_canvas_pass.h  ge_filter_composer_pass.h  ge_hps_build_pass.h  ge_hps_upscale_pass.h  ge_image_cache_provider.h  ge_mesa_fusion_pass.h  ge_render.h
include/sdf/: ge_sdf_border_shader.h  ge_sdf_cascade_manager.h  ge_sdf_clip_shader.h  ge_sdf_edge_light.h  ge_sdf_effects.h  ge_sdf_empty_shader_shape.h  ge_sdf_from_image_filter.h  ge_sdf_pixelmap_shader_shape.h  ge_sdf_rrect_shader_mask.h  ge_sdf_rrect_shader_shape.h  ge_sdf_shader_filter.h  ge_sdf_shader_mask.h  ge_sdf_shader_shape.h  ge_sdf_shadow_shader.h  ge_sdf_transform_shader_shape.h  ge_sdf_tree_manager.h  ge_sdf_tree_processor.h  ge_sdf_union_op_shader_mask.h  ge_sdf_union_op_shader_shape.h  ge_shader_shape.h
include/util/: ge_common.h  ge_downcast.h  ge_log.h  ge_shader_diagnostics.h  ge_source_location.h  ge_tone_mapping_helper.h  ge_trace.h  ge_transform_helper.h
include/utils/: ge_downcast.h  ge_trace.h
skills/ge-add-effect/: SKILL.md
src/: ge_aibar_shader_filter.cpp  ge_aurora_noise_shader.cpp  ge_bezier_warp_shader_filter.cpp  ge_border_light_shader.cpp  ge_circle_flowlight_effect.cpp  ge_color_gradient_effect.cpp  ge_color_gradient_shader_filter.cpp  ge_color_remap_shader_filter.cpp  ge_content_light_shader_filter.cpp  ge_contour_diagonal_flow_light_shader.cpp  ge_direct_draw_on_canvas_pass.cpp  ge_direction_light_shader_filter.cpp  ge_dispersion_shader_filter.cpp  ge_displacement_distort_shader_filter.cpp  ge_double_ripple_shader_mask.cpp  ge_edge_light_shader_filter.cpp  ge_filter_composer.cpp  ge_frame_gradient_shader_mask.cpp  ge_frosted_glass_blur_shader_filter.cpp  ge_frosted_glass_effect.cpp  ge_frosted_glass_shader_filter.cpp  ge_gamma_correction_filter.cpp  ge_grey_shader_filter.cpp  ge_grid_warp_shader_filter.cpp  ge_harmonium_effect_shader_mask.cpp  ge_hps_build_pass.cpp  ge_hps_compatible_pass.cpp  ge_hps_effect_filter.cpp  ge_kawase_blur_shader_filter.cpp  ge_linear_gradient_blur_shader_filter.cpp  ge_linear_gradient_shader_mask.cpp  ge_magnifier_shader_filter.cpp  ge_map_color_by_brightness_shader_filter.cpp  ge_mask_transition_shader_filter.cpp  ge_mesa_blur_shader_filter.cpp  ge_mesa_fusion_pass.cpp  ge_particle_circular_halo_shader.cpp  ge_pixel_map_shader_mask.cpp  ge_radial_gradient_shader_mask.cpp  ge_render.cpp  (+13 more)
src/core/: ge_effect_factory.cpp  ge_effect_register.cpp  ge_factory_register.cpp  ge_visual_effect.cpp  ge_visual_effect_container.cpp  ge_visual_effect_impl.cpp  ge_visual_effect_impl_v2.cpp
src/effect/: ge_params_reflection.cpp  ge_params_reflection_v2.cpp
src/effect_cfg/: ge_frosted_glass_effect_cfg.cpp  ge_xml_parser_base.cpp
src/ext/: gex_marshalling_helper.cpp
src/hps/: ge_hps_effect_filter.cpp
src/pipeline/: ge_hps_build_pass.cpp  ge_hps_upscale_pass.cpp  ge_render.cpp
src/sdf/: ge_sdf_border_shader.cpp  ge_sdf_clip_shader.cpp  ge_sdf_edge_light.cpp  ge_sdf_effects.cpp  ge_sdf_from_image_filter.cpp  ge_sdf_pixelmap_shader_shape.cpp  ge_sdf_rrect_shader_shape.cpp  ge_sdf_shader_filter.cpp  ge_sdf_shader_mask.cpp  ge_sdf_shader_shape.cpp  ge_sdf_shadow_shader.cpp  ge_sdf_transform_shader_shape.cpp  ge_sdf_tree_processor.cpp  ge_sdf_union_op_shader_mask.cpp  ge_sdf_union_op_shader_shape.cpp
src/util/: ge_shader_diagnostics.cpp  ge_tone_mapping_helper.cpp  ge_transform_helper.cpp
test/fuzztest/: BUILD.gn  get_object.h
test/unittest/: BUILD.gn  ge_aibar_shader_filter_test.cpp  ge_aurora_noise_shader_test.cpp  (+84 more)
tool/: example_params.json  ge_effect_generator.py  validate_reflection_metadata.py
tools/: attribute_parser.py  convert_params_v2.py  cpp_parser.py  generate_reflection_metadata_v2.py
(+804 files in other folders)
